# ChangeLog for app-antivirus/clamav
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-antivirus/clamav/ChangeLog,v 1.290 2008/05/11 11:35:39 dertobi123 Exp $

  11 May 2008; Tobias Scherbaum <dertobi123@gentoo.org> clamav-0.93.ebuild:
  ppc stable, bug #213762

  07 May 2008; Markus Rothe <corsair@gentoo.org> clamav-0.93.ebuild:
  Stable on ppc64; bug #213762

  04 May 2008; Andrej Kacian <ticho@gentoo.org> +files/lib-ld.m4,
  clamav-0.93.ebuild:
  Supply lib-ld.m4 file, originally provided by gettext, for non-nls users -
  autoconf needs it. Bug #218892, thanks to Natanael Copa.

  21 Apr 2008; Markus Meier <maekke@gentoo.org> clamav-0.93.ebuild:
  amd64 stable, security bug #213762

  21 Apr 2008; Raúl Porcel <armin76@gentoo.org> clamav-0.93.ebuild:
  alpha/ia64/sparc/x86 stable wrt security #213762

  21 Apr 2008; Jeroen Roovers <jer@gentoo.org> clamav-0.93.ebuild:
  Stable for HPPA (bug #213762).

  17 Apr 2008; Andrej Kacian <ticho@gentoo.org>
  +files/clamav-0.93-buildfix.patch, files/clamav-0.93-nls.patch,
  clamav-0.93.ebuild:
  Added iconv support to ebuild. Added patch to fix bad dynamic linking by
  Raphael Marichez <falco at gentoo org>, so the build is actually usable.
  Bug #213762.

*clamav-0.93 (15 Apr 2008)

  15 Apr 2008; Raphael Marichez <falco@gentoo.org>
  +files/clamav-0.93-nls.patch, +clamav-0.93.ebuild:
  Security bump, bug #213762 and add -I m4 in aclocal

*clamav-0.92.1-r1 (29 Feb 2008)

  29 Feb 2008; Andrej Kacian <ticho@gentoo.org> files/clamd.conf,
  files/clamd.rc, +clamav-0.92.1-r1.ebuild:
  Add support for setting process niceness in conf.d file. Suggestion by Jens
  Weibler <gentoo-bugzilla at jensthebrain de>, bug #211397.

  23 Feb 2008; Andrej Kacian <ticho@gentoo.org> clamav-0.92.1.ebuild:
  Enable AllowSupplementaryGroups option by default for better integration
  with other apps out of the box.

  19 Feb 2008; Tobias Scherbaum <dertobi123@gentoo.org>