@@ -1,6 +1,11 @@
 # ChangeLog for app-antivirus/clamav
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-antivirus/clamav/ChangeLog,v 1.290 2008/05/11 11:35:39 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-antivirus/clamav/ChangeLog,v 1.291 2008/06/11 12:58:06 falco Exp $
+
+*clamav-0.93.1 (11 Jun 2008)
+
+  11 Jun 2008; Raphael Marichez <falco@gentoo.org> +clamav-0.93.1.ebuild:
+  Version bump, keep "buildfix" patch to prevent libtoolize with -L/usr/lib
 
   11 May 2008; Tobias Scherbaum <dertobi123@gentoo.org> clamav-0.93.ebuild:
   ppc stable, bug #213762
